# scapes

./: .env.example  .gitignore  .hintrc  README.md  a.py  data.db  ideas.txt  index.html  mockdata.json  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js
back/: Cargo.toml
back/src/: a.py  build.rs  data.json  database.rs  db.rs  engine.rs  integrations.cpp  integrations.rs  lib.rs  main.rs  metadata_extract.rs  test.db  test2.db
back/src/integrations/: detector.cpp  protools-win.cpp  protools-win.h  reaper-win.cpp
integrations/: a.lua  common.cpp  config.cpp  detector.cpp  protools-win.cpp  reaper-win.cpp  run.cpp
src/: app.css  app.html
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: integrations.cpp  integrations.h  integrations.rs  main.rs  metadata_extract.rs
src-tauri/src/integrations/: detector.cpp  detector.h  protools-win.cpp  protools-win.h  reaper-win.cpp  reaper-win.h
src/assets/icons/: CloseHoverMacos.svelte  CloseNormalMacos.svelte  Folders.svelte  MagnifyingGlass.svelte  MagnifyingGlassFill.svelte  MaximizeHoverMacos.svelte  X.svelte  (+25 more)
src/lib/: AppPanel.svelte  AppResizable.svelte  DataTable.svelte  DesktopTitleBar.svelte  ImportFiles.svelte  InfoPane.svelte  LayoutControls.svelte  Logo.svelte  SearchBar.svelte  SendTo.svelte  StatusBar.svelte  ThemeToggle.svelte  TitleBar.svelte  ToolBar.svelte  WaveForm.svelte  WindowControls.svelte
src/routes/: +layout.svelte  +page.svelte
view/: index.html  package-lock.json  package.json
view/src/: App.svelte  app.css
view/src-tauri/: Cargo.toml  tauri.conf.json
(+25 files in other folders)
