[package]
name = "back"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
c_str_macro = "1.0.3"
chrono = "0.4.37"
reaper-low = "0.1.0"
reaper-macros = "0.1.0"
reaper-medium = "0.1.0"
rusqlite = {version = "0.31.0", features = ["bundled"]}
serde_json = "1.0.115"
sha2 = "0.10.8"
