[package]
name = "scapes"
version = "0.1.0"
description = "a tool to speed up sound design workflows"
authors = ["Adam Sharif"]
license = ""
repository = "https://github.com/adamsharifc/scapes"
default-run = "scapes"
edition = "2021"
rust-version = "1.90"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "scapes_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }
cc = "1.2.38"

[dependencies]
tauri = { version = "2.8.5", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4.42"
rusqlite = {version = "0.37.0", features = ["bundled", "serde_json"] }
sha2 = "0.10.9"
thiserror = "2.0.16"
tokio = "1.47.1"


